2003-10-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command-history.c

	Added a changed signal
	
	* cong-command.c

	Fixed a warning

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-file-properties.c, cong-location.c, cong-location.h, cong-node-properties-dialog.c, cong-selection.h, cong-source-view.c, cong-util.c, cong-util.h, cong-view.h, cursor.c, global.h, plugin-cleanup-source.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c

	Removed the pre-undo/redo API, and the preprocessor cruft that went with it.
	
	* cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-file-properties.c, cong-source-view.c, cong-view.h

	Integrated DTD changes into undo/redo system

	* cong-modification-set-dtd-ptr.c, cong-modification-set-dtd-ptr.h, Makefile.am

	New files:  a new modification subclass for handling DTD changes within undo/redo system.

2003-10-06  Robert Varga

	* cong-util.c, cong-util.h and main.c
	Moved cong_vfs_read_bytes, cong_vfs_new_buffer_from_file and
	cong_vfs_new_buffer_from_uri to make gtk-doc generation possible.

2003-10-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command-history.c, cong-document.c

	Reduced the amount of debug spew

	* cong-command-history.c, cong-command.c, cong-command.h, cong-document.c

	Implemented command merging

2003-10-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-location.c, cong-menus.c, cong-node-properties-dialog.c, cursor.c, plugin-cleanup-source.c, popup.c, tree.c, xmledit.c
